2011-03-15  Tony Chang  <tony@chromium.org>

        Fix chromium build using python 2.5 (with statement).

        * scripts/generate_devtools_grd.py:

2011-03-15  Tony Chang  <tony@chromium.org>

        Reviewed by Adam Barth.

        [chromium] add a build target to create a grd file with devtool resources
        https://bugs.webkit.org/show_bug.cgi?id=56335

        This is the webkit side of the fix for
        http://code.google.com/p/chromium/issues/detail?id=35793

        * WebKit.gyp:
        * scripts/generate_devtools_grd.py: Added.

2011-03-15  Bill Budge  <bbudge@chromium.org>

        Reviewed by David Levin.

        AssociatedURLLoader does not support Cross Origin Requests
        https://bugs.webkit.org/show_bug.cgi?id=53925

        No new tests. No new functionality exposed.

        * public/WebURLLoader.h:
        (WebKit::WebURLLoaderOptions::WebURLLoaderOptions):
        * src/AssociatedURLLoader.cpp:
        (WebKit::AssociatedURLLoader::ClientAdapter::clearClient):
        (WebKit::AssociatedURLLoader::ClientAdapter::create):
        (WebKit::AssociatedURLLoader::ClientAdapter::ClientAdapter):
        (WebKit::AssociatedURLLoader::ClientAdapter::willSendRequest):
        (WebKit::AssociatedURLLoader::ClientAdapter::didSendData):
        (WebKit::AssociatedURLLoader::ClientAdapter::didReceiveResponse):
        (WebKit::AssociatedURLLoader::ClientAdapter::didReceiveData):
        (WebKit::AssociatedURLLoader::ClientAdapter::didReceiveCachedMetadata):
        (WebKit::AssociatedURLLoader::ClientAdapter::didFinishLoading):
        (WebKit::AssociatedURLLoader::ClientAdapter::didFail):
        (WebKit::AssociatedURLLoader::AssociatedURLLoader):
        (WebKit::AssociatedURLLoader::~AssociatedURLLoader):
        (WebKit::AssociatedURLLoader::loadSynchronously):
        (WebKit::AssociatedURLLoader::loadAsynchronously):
        (WebKit::AssociatedURLLoader::cancel):
        (WebKit::AssociatedURLLoader::setDefersLoading):